--- a/WpfApp5/MainWindow.xaml
+++ b/WpfApp5/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp5"
         mc:Ignorable="d"
-        Title="Questionnaire" Height="766.924" Width="800">
+        Title="Questionnaire" Height="766" Width="800">
     <Grid>
         <Label x:Name="label" Content="Fill out this form and choose the correct answer for a chance to win*." HorizontalAlignment="Left" Margin="60,128,0,0" VerticalAlignment="Top" FontFamily="Segoe UI Black" Foreground="#FF6A6969" FontSize="14" Width="501"/>
         <Label x:Name="label1" Content="Enter Our Contest!" HorizontalAlignment="Left" Margin="60,90,0,0" VerticalAlignment="Top" Width="249" FontFamily="Segoe UI Black" FontSize="22" TextOptions.TextHintingMode="Fixed" Foreground="#FF6A6969"/>
@@ -24,7 +24,7 @@
         <Label x:Name="label2_Copy2" Content="Address" HorizontalAlignment="Left" Margin="62,354,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969"/>
         <Label x:Name="label3_Copy1" Content="City" HorizontalAlignment="Left" Margin="187,439,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" RenderTransformOrigin="-1.069,0.48"/>
         <Label x:Name="label3_Copy2" Content="Postal Code" HorizontalAlignment="Left" Margin="550,439,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11"/>
-        <Image x:Name="Image1_png" Margin="250,11,250,660" Source="Image1.png" Stretch="Fill"/>
+        <Image x:Name="Image1_png" Margin="250,11,250,660" Source="Image1.png" Stretch="Fill" Width="300" Height="70"/>
         <Label x:Name="label4" Content="* All correct answers will be entered into the draw, the winner will be notified by email  " HorizontalAlignment="Left" Margin="64,669,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnGreen" Content="Green" HorizontalAlignment="Left" Margin="149,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1"/>
         <Label x:Name="label5" Content="Question: What is the colour of the flag in our company logo?" HorizontalAlignment="Left" Margin="72,487,0,0" VerticalAlignment="Top" Width="670" FontSize="22" FontWeight="Bold" Foreground="#FF6A6969"/>
