Code behind toegevoegd

--- a/MailingList.Wpf/MainWindow.xaml
+++ b/MailingList.Wpf/MainWindow.xaml
@@ -19,47 +19,49 @@
             <ColumnDefinition Width="139*"/>
         </Grid.ColumnDefinitions>
 
-        <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="353" Margin="196,389,0,0" VerticalAlignment="Top" Width="659"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="635" Margin="38,107,0,0" VerticalAlignment="Top" Width="711" Grid.ColumnSpan="4"/>
+
+        <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="345" Margin="196,397,0,0" VerticalAlignment="Top" Width="659"/>
 
         <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="238" Margin="196,107,0,0" VerticalAlignment="Top" Width="659"/>
 
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="635" Margin="38,107,0,0" VerticalAlignment="Top" Width="711" Grid.ColumnSpan="4"/>
-
         <Image x:Name="Image1_png" Margin="0,0,33,694" Source="Image1.png" Stretch="Fill" Grid.ColumnSpan="3" Grid.Column="2" Width="300" Height="70"/>
-        <ListBox x:Name="lstMailingList" HorizontalAlignment="Left" Height="203" Margin="57,142,0,0" VerticalAlignment="Top" Width="672" RenderTransformOrigin="-0.328,0.018" Grid.ColumnSpan="4"/>
-        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="23" Margin="57,389,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="333" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="23" Margin="328,389,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Grid.ColumnSpan="3" Grid.Column="1"/>
-        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="23" Margin="57,459,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="672" Grid.ColumnSpan="4"/>
-        <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="23" Margin="57,515,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="672" Grid.ColumnSpan="4"/>
-        <TextBox x:Name="txtStreet" HorizontalAlignment="Left" Height="23" Margin="57,571,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="672" Grid.ColumnSpan="4"/>
-        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Height="23" Margin="108,616,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="345" Grid.ColumnSpan="2" Grid.Column="1"/>
-        <TextBox x:Name="txtPostalCode" HorizontalAlignment="Left" Height="23" Margin="41,616,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" Grid.Column="2" Grid.ColumnSpan="2"/>
-        <Label x:Name="label2" Content="Name" HorizontalAlignment="Left" Margin="57,364,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
-        <Label x:Name="label3" Content="First Name" HorizontalAlignment="Left" Margin="51,405,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.ColumnSpan="2"/>
-        <Label x:Name="label3_Copy" Content="Last Name" HorizontalAlignment="Left" Margin="323,405,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.Column="1"/>
-        <Label x:Name="label2_Copy" Content="Email" HorizontalAlignment="Left" Margin="57,434,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
-        <Label x:Name="label2_Copy1" Content="Phone" HorizontalAlignment="Left" Margin="57,492,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
-        <Label x:Name="label2_Copy2" Content="Address" HorizontalAlignment="Left" Margin="58,548,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
-        <Label x:Name="label3_Copy1" Content="City" HorizontalAlignment="Left" Margin="104,632,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" RenderTransformOrigin="-1.069,0.48" Grid.Column="1"/>
-        <Label x:Name="label3_Copy2" Content="Postal Code" HorizontalAlignment="Left" Margin="36,632,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.Column="2" Grid.ColumnSpan="2"/>
-        <Label x:Name="label3_Copy3" Content="Street" HorizontalAlignment="Left" Margin="52,587,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtStreetNumber" HorizontalAlignment="Left" Height="23" Margin="57,616,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Grid.ColumnSpan="2"/>
-        <Label x:Name="label3_Copy4" Content="Street Number" HorizontalAlignment="Left" Margin="53,632,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Width="92" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="46,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Click="btnGreen_Click" Grid.Column="1"/>
-        <Button x:Name="btnNew" Content="New" HorizontalAlignment="Left" Margin="256,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92DEE6" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="1" Click="btnBlue_Click"/>
-        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="36,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FFEA9D02" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="2" Click="btnOrange_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnSendNewsLetter" Content="Send newsletter" HorizontalAlignment="Left" Margin="19,289,0,0" VerticalAlignment="Top" Width="153" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="6" Click="btnGreen_Click" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnChooseWinner" Content="Choose winner" HorizontalAlignment="Left" Margin="8,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92DEE6" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="5" Click="btnBlue_Click" Grid.ColumnSpan="3"/>
-        <Button x:Name="btnSendWinnersMail" Content="Send winners mail" HorizontalAlignment="Left" Margin="141,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FFEA9D02" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="7" Click="btnOrange_Click" Grid.ColumnSpan="2"/>
+        <ListBox x:Name="lstMailingList" HorizontalAlignment="Left" Height="203" Margin="57,142,0,0" VerticalAlignment="Top" Width="672" RenderTransformOrigin="-0.328,0.018" Grid.ColumnSpan="4" TabIndex="1"/>
+        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="23" Margin="57,397,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="333" Grid.ColumnSpan="2" TabIndex="2"/>
+        <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="23" Margin="328,397,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" Grid.ColumnSpan="3" Grid.Column="1" TabIndex="3"/>
+        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="23" Margin="57,467,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="672" Grid.ColumnSpan="4" TabIndex="4"/>
+        <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="23" Margin="57,523,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="672" Grid.ColumnSpan="4" TabIndex="5"/>
+        <TextBox x:Name="txtStreet" HorizontalAlignment="Left" Height="23" Margin="57,579,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="672" Grid.ColumnSpan="4" TabIndex="6"/>
+        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Height="23" Margin="108,624,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="345" Grid.ColumnSpan="2" Grid.Column="1" TabIndex="8"/>
+        <TextBox x:Name="txtPostalCode" HorizontalAlignment="Left" Height="23" Margin="41,624,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" Grid.Column="2" Grid.ColumnSpan="2" TabIndex="9"/>
+        <Label x:Name="label2" Content="Name" HorizontalAlignment="Left" Margin="57,372,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
+        <Label x:Name="label3" Content="First Name" HorizontalAlignment="Left" Margin="51,413,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.ColumnSpan="2"/>
+        <Label x:Name="label3_Copy" Content="Last Name" HorizontalAlignment="Left" Margin="323,413,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.Column="1"/>
+        <Label x:Name="label2_Copy" Content="Email" HorizontalAlignment="Left" Margin="57,442,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
+        <Label x:Name="label2_Copy1" Content="Phone" HorizontalAlignment="Left" Margin="57,500,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
+        <Label x:Name="label2_Copy2" Content="Address" HorizontalAlignment="Left" Margin="58,556,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.ColumnSpan="2"/>
+        <Label x:Name="label3_Copy1" Content="City" HorizontalAlignment="Left" Margin="104,640,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" RenderTransformOrigin="-1.069,0.48" Grid.Column="1"/>
+        <Label x:Name="label3_Copy2" Content="Postal Code" HorizontalAlignment="Left" Margin="36,640,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.Column="2" Grid.ColumnSpan="2"/>
+        <Label x:Name="label3_Copy3" Content="Street" HorizontalAlignment="Left" Margin="52,595,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtStreetNumber" HorizontalAlignment="Left" Height="23" Margin="57,624,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="112" Grid.ColumnSpan="2" TabIndex="7"/>
+        <Label x:Name="label3_Copy4" Content="Street Number" HorizontalAlignment="Left" Margin="53,640,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Width="92" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnSave" Content="Save" HorizontalAlignment="Left" Margin="46,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Click="btnSave_Click" Grid.Column="1" TabIndex="10"/>
+        <Button x:Name="btnNew" Content="New" HorizontalAlignment="Left" Margin="256,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92DEE6" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="1" Click="btnNew_Click" TabIndex="11"/>
+        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="36,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FFEA9D02" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="2" Click="btnDelete_Click" Grid.ColumnSpan="2" TabIndex="12"/>
+        <Button x:Name="btnSendNewsLetter" Content="Send newsletter" HorizontalAlignment="Left" Margin="19,289,0,0" VerticalAlignment="Top" Width="153" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="6" Click="btnSendNewsLetter_Click" Grid.ColumnSpan="2" TabIndex="14"/>
+        <Button x:Name="btnChooseWinner" Content="Choose winner" HorizontalAlignment="Left" Margin="8,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92DEE6" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="5" Click="btnChooseWinner_Click" Grid.ColumnSpan="3" TabIndex="16"/>
+        <Button x:Name="btnSendWinnersMail" Content="Send winners mail" HorizontalAlignment="Left" Margin="141,682,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FFEA9D02" Foreground="#FF6A6969" RenderTransformOrigin="1,1" Grid.Column="7" Click="btnSendWinnersMail_Click" Grid.ColumnSpan="2" TabIndex="17"/>
         <Label x:Name="label" Content="Mailinglist Manager" Grid.Column="1" HorizontalAlignment="Left" Margin="231,107,0,0" VerticalAlignment="Top" Width="192" Foreground="Gray" FontSize="18" FontWeight="Bold"/>
         <Label x:Name="label_Copy" Content="Newsletter Manager" Grid.Column="6" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="201" Foreground="Gray" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
         <Label x:Name="label2_Copy4" Content="and the winner is..." HorizontalAlignment="Left" Margin="214,453,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.Column="3" Grid.ColumnSpan="2" Width="129"/>
-        <TextBox x:Name="txtWinnersMail" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="129" Margin="213,501,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="629"/>
+        <TextBox x:Name="txtWinnersMail" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="129" Margin="213,501,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="629" TabIndex="15"/>
         <Label x:Name="label2_Copy5" Content="Winners mail" HorizontalAlignment="Left" Margin="213,630,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.Column="3" Grid.ColumnSpan="2" Width="106"/>
-        <TextBox x:Name="txtNewsLetter" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="129" Margin="213,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="629"/>
+        <TextBox x:Name="txtNewsLetter" Grid.ColumnSpan="6" Grid.Column="3" HorizontalAlignment="Left" Height="129" Margin="213,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="629" TabIndex="13"/>
         <Label x:Name="label2_Copy3" Content="Newsletter" HorizontalAlignment="Left" Margin="213,271,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969" Grid.Column="3" Grid.ColumnSpan="2" Width="106"/>
         <Label x:Name="label_Copy1" Content="Competition Manager" Grid.Column="6" HorizontalAlignment="Left" Margin="10,394,0,0" VerticalAlignment="Top" Width="201" Foreground="Gray" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <Label x:Name="lblWinner" Content="" HorizontalAlignment="Left" Margin="214,428,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.Column="3" Grid.ColumnSpan="6" Width="628" Background="{x:Null}" BorderBrush="#FFABADB3" BorderThickness="1"/>
+        <Label x:Name="lblWinner" Content="" HorizontalAlignment="Left" Margin="214,428,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Grid.Column="3" Grid.ColumnSpan="6" Width="628" Background="{x:Null}" BorderBrush="#FFABADB3" BorderThickness="1" TabIndex="14"/>
+        <Label x:Name="lblId" Content="" Grid.Column="3" HorizontalAlignment="Left" Margin="101,359,0,0" VerticalAlignment="Top" Width="41" BorderBrush="#FFC0C2C6" BorderThickness="1" Height="23" Background="White"/>
+        <Label x:Name="label3_Copy5" Content="ID" HorizontalAlignment="Left" Margin="79,359,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" RenderTransformOrigin="4.526,-0.8" Grid.Column="3"/>
 
     </Grid>
 </Window>
