--- a/WpfApp5/MainWindow.xaml
+++ b/WpfApp5/MainWindow.xaml
@@ -5,17 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp5"
         mc:Ignorable="d"
-        Title="Questionnaire" Height="766" Width="800">
+        Title="Questionnaire" Height="766" Width="800" TabIndex="123456789">
     <Grid>
         <Label x:Name="label" Content="Fill out this form and choose the correct answer for a chance to win*." HorizontalAlignment="Left" Margin="60,128,0,0" VerticalAlignment="Top" FontFamily="Segoe UI Black" Foreground="#FF6A6969" FontSize="14" Width="501"/>
         <Label x:Name="label1" Content="Enter Our Contest!" HorizontalAlignment="Left" Margin="60,90,0,0" VerticalAlignment="Top" Width="249" FontFamily="Segoe UI Black" FontSize="22" TextOptions.TextHintingMode="Fixed" Foreground="#FF6A6969"/>
-        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="23" Margin="65,190,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="326"/>
-        <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="23" Margin="410,190,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320"/>
-        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="23" Margin="65,265,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="665"/>
-        <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="23" Margin="65,321,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="665"/>
-        <TextBox x:Name="txtStreet" HorizontalAlignment="Left" Height="23" Margin="65,377,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="665"/>
-        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Height="23" Margin="190,422,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="345"/>
-        <TextBox x:Name="txtPostalCode" HorizontalAlignment="Left" Height="23" Margin="556,422,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174"/>
+        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="23" Margin="65,190,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="326" TabIndex="1"/>
+        <TextBox x:Name="txtLastName" HorizontalAlignment="Left" Height="23" Margin="410,190,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="320" TabIndex="2"/>
+        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Height="23" Margin="65,265,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="665" TabIndex="3"/>
+        <TextBox x:Name="txtPhone" HorizontalAlignment="Left" Height="23" Margin="65,321,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="665" TabIndex="4"/>
+        <TextBox x:Name="txtStreet" HorizontalAlignment="Left" Height="23" Margin="65,377,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="665" TabIndex="5"/>
+        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Height="23" Margin="190,422,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="345" TabIndex="7"/>
+        <TextBox x:Name="txtPostalCode" HorizontalAlignment="Left" Height="23" Margin="556,422,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" TabIndex="8"/>
         <Label x:Name="label2" Content="Name" HorizontalAlignment="Left" Margin="62,165,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.148,0.471" FontWeight="Bold" Foreground="#FF6A6969"/>
         <Label x:Name="label3" Content="First Name" HorizontalAlignment="Left" Margin="61,208,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11"/>
         <Label x:Name="label3_Copy" Content="Last Name" HorizontalAlignment="Left" Margin="406,209,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11"/>
@@ -26,12 +26,12 @@
         <Label x:Name="label3_Copy2" Content="Postal Code" HorizontalAlignment="Left" Margin="550,439,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11"/>
         <Image x:Name="Image1_png" Margin="250,11,250,660" Source="Image1.png" Stretch="Fill" Width="300" Height="70"/>
         <Label x:Name="label4" Content="* All correct answers will be entered into the draw, the winner will be notified by email  " HorizontalAlignment="Left" Margin="64,669,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnGreen" Content="Green" HorizontalAlignment="Left" Margin="149,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1"/>
+        <Button x:Name="btnGreen" Content="Green" HorizontalAlignment="Left" Margin="149,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92E692" Foreground="#FF6A6969" RenderTransformOrigin="1,1" TabIndex="9"/>
         <Label x:Name="label5" Content="Question: What is the colour of the flag in our company logo?" HorizontalAlignment="Left" Margin="72,487,0,0" VerticalAlignment="Top" Width="670" FontSize="22" FontWeight="Bold" Foreground="#FF6A6969"/>
-        <Button x:Name="btnBlue" Content="Blue" HorizontalAlignment="Left" Margin="341,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92DEE6" Foreground="#FF6A6969" RenderTransformOrigin="1,1"/>
-        <Button x:Name="btnOrange" Content="Orange" HorizontalAlignment="Left" Margin="534,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FFEA9D02" Foreground="#FF6A6969" RenderTransformOrigin="1,1"/>
+        <Button x:Name="btnBlue" Content="Blue" HorizontalAlignment="Left" Margin="341,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FF92DEE6" Foreground="#FF6A6969" RenderTransformOrigin="1,1" TabIndex="10"/>
+        <Button x:Name="btnOrange" Content="Orange" HorizontalAlignment="Left" Margin="534,546,0,0" VerticalAlignment="Top" Width="114" Height="43" Background="#FFEA9D02" Foreground="#FF6A6969" RenderTransformOrigin="1,1" TabIndex="11"/>
         <Label x:Name="label3_Copy3" Content="Street" HorizontalAlignment="Left" Margin="61,393,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11"/>
-        <TextBox x:Name="txtStreetNumber" HorizontalAlignment="Left" Height="23" Margin="65,422,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="105"/>
+        <TextBox x:Name="txtStreetNumber" HorizontalAlignment="Left" Height="23" Margin="65,422,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="105" TabIndex="6"/>
         <Label x:Name="label3_Copy4" Content="Street Number" HorizontalAlignment="Left" Margin="62,439,0,0" VerticalAlignment="Top" Foreground="#FF6A6969" FontSize="11" Width="92"/>
 
     </Grid>
